--- a/charts/ms-apps/v6.0.0/config/datarouter/log4j.properties
+++ b/charts/ms-apps/v6.0.0/config/datarouter/log4j.properties
@@ -7,6 +7,6 @@ log4j.appender.appender1=org.apache.log4j.RollingFileAppender
 log4j.appender.appender1.MaxFileSize=10MB
 log4j.appender.appender1.MaxBackupIndex=10
 log4j.appender.appender1.layout=org.apache.log4j.PatternLayout
-#log4j.appender.appender1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.appender1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 #log4j.appender.appender1.layout.ConversionPattern=%d{yyyy-MM-dd}-%t-%x-%-5p-%-10c:%m%n
-log4j.appender.appender1.layout.ConversionPattern= %d{HH:mm}| %p | %F %L | %m%n
+#log4j.appender.appender1.layout.ConversionPattern= %d{HH:mm}| %p | %F %L | %m%n
