--- a/charts/ms-apps/v6.0.0/templates/components/tomcat-libreoffice.yaml
+++ b/charts/ms-apps/v6.0.0/templates/components/tomcat-libreoffice.yaml
@@ -10,7 +10,7 @@ spec:
       targetPort: 8080
   selector:
     app: tomcat
-  {{- if (eq "GKE" .Values.cloudService.provider) }}
+  {{- if or (eq "GKE" .Values.cloudService.provider) (eq "EKS" .Values.cloudService.provider) }}
   type: NodePort
   {{- end }}
 ---
