--- a/charts/ms-apps/v6.0.0/templates/network-policy/oracle.yaml
+++ b/charts/ms-apps/v6.0.0/templates/network-policy/oracle.yaml
@@ -14,6 +14,9 @@ spec:
     - podSelector:
         matchLabels:
           app: tomcat
+    - podSelector:
+        matchLabels:
+          app: logstash
     ports:
     - protocol: TCP
       port: 1521
